--- a/index.html
+++ b/index.html
@@ -400,18 +400,18 @@
         <h2>Featured Books</h2>
         <div class="book-categories">
     
-            <!-- Example Book Category 1 -->
-            <div class="book-category">
-                <img src="i1.jpg" alt="Basic Maths Book">
-                <div class="book-details">
-                    <h3>Basic Maths</h3>
-                    <p><strong>Book ID:</strong> 01</p>
-                    <p><strong>Publication:</strong> XYZ</p>
-                    <p><strong>Original Price:</strong> $1000</p>
-                    <p><strong>Selling Price:</strong> $244</p>
-                    <p><strong>Remarks:</strong> Good condition, minimal markings.</p>
-                    <a href="https://forms.gle/La1wBGQFe2noKig56" class="buy-button">Buy Now</a>
-                </div>
+                      <!-- Example Book Category 1 -->
+            <div class="book-category">
+                <img src="B01.jpg" alt="B01_img">
+                <div class="book-details">
+                    <h3>Old is Gold</h3>
+                    <p><strong>Book ID:</strong> 01</p>
+                    <p><strong>Publication:</strong> Asmita's Publication</p>
+                    <p><strong>Original Price:</strong> Rs. 555</p>
+                    <p><strong>Selling Price:</strong> Rs. 300</p>
+                    <p><strong>Remarks:</strong> Good condition, minimal markings.</p>
+                    <a href="https://forms.gle/La1wBGQFe2noKig56" class="buy-button">Buy Now</a>
+                </div>
             </div>
     
              <!-- Example Book Category 1 -->
