--- a/index.html
+++ b/index.html
@@ -403,11 +403,11 @@
     
              <!-- Example Book Category 1 -->
              <div class="book-category">
-                <img src="images/i4.jpeg" alt="Basic Maths Book">
+                <img src="https://drive.google.com/file/d/1mDd3_YHlGcG__waxiCxK0U34KnHMmm5X/view?usp=drive_link" alt="Basic Maths Book">
                 <div class="book-details">
                     <h3>Basic Maths</h3>
                     <p><strong>Book ID:</strong> 01</p>
-                    <p><strong>Publication:</strong> XYZ</p>
+                    <p><strong>Publication:</strong> Trial book</p>
                     <p><strong>Original Price:</strong> $1000</p>
                     <p><strong>Selling Price:</strong> $244</p>
                     <p><strong>Remarks:</strong> Good condition, minimal markings.</p>
