--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     
              <!-- Example Book Category 1 -->
              <div class="book-category">
-                <img src="https://drive.google.com/file/d/1mDd3_YHlGcG__waxiCxK0U34KnHMmm5X/view?usp=drive_link" alt="Basic Maths Book">
+                <img src="https://drive.google.com/file/d/1__6225LvmLNk-2DBOwzjz5K1xGybtm3c/view?usp=sharing" alt="Basic Maths Book">
                 <div class="book-details">
                     <h3>Basic Maths</h3>
                     <p><strong>Book ID:</strong> 01</p>
